ie7 fix,  event list image on safari fix

--- a/css/latto.subtheme.styles.css
+++ b/css/latto.subtheme.styles.css
@@ -948,7 +948,7 @@ Content pane styling
 .image-container img {
   height: auto;
   max-width: 100%;
-  min-width: 138px;
+  min-width: 100%;
 }
 
 /* equivalent to font-size: 100% */
