--- a/sass/latto.subtheme.base.scss
+++ b/sass/latto.subtheme.base.scss
@@ -679,6 +679,6 @@ ul {
       img {
         height: auto;
         max-width: 100%;
-        min-width: 138px;
+        min-width: 100%;
       }
       }
